Path.of() instead of Paths.get() in CgroupV2Subsystem.java